# rpi-igw

./: README.md  code.cpp
igw/: .gitignore  CMakeLists.txt
igw/include/: camera.hpp  line.hpp  setup.hpp
igw/src/: camera.cpp  main.cpp
